Count API: Include took/timed_out fields
In order to look like the search response API, this commit
adds the took/timed_out fields to the count API REST output.

--- a/rest-api-spec/src/main/resources/rest-api-spec/test/count/10_basic.yaml
+++ b/rest-api-spec/src/main/resources/rest-api-spec/test/count/10_basic.yaml
@@ -25,6 +25,8 @@ setup:
               foo: bar
 
   - match: {count : 1}
+  - is_false: timed_out
+  - gte: { took: 0 }
 
   - do:
       count:
@@ -36,6 +38,8 @@ setup:
               foo: test
 
   - match: {count : 0}
+  - is_false: timed_out
+  - gte: { took: 0 }
 
 ---
 "count with empty body":
@@ -54,6 +58,8 @@ setup:
         type: test
 
   - match: {count : 1}
+  - is_false: timed_out
+  - gte: { took: 0 }
 
 ---
 "count body without query element":
